fix: popup buttons aligned

--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -632,11 +632,27 @@
     right: 10px;
   }
   .modalDoneButton {
-    width:48%;
+    width:47%;
+    display: inline-block;
+    margin-right:4%;
   }
 
   .close-modal {
     width:29%;
+    display:none;
+  }
+
+  .proxyCancelButton {
+
+    display: inline-block;
+    width: 47%;
+    background-color: #282b30;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    cursor:pointer;
   }
 }
 
@@ -794,7 +810,7 @@
 
 .modalDoneButton {
   background-color: #3eb2cc;
-  margin-top: 29px;
+  margin-top: 20px;
 
 }
 
